SolidSamples_Part2_OCP/app/src/main/java/com/example/solidsamples/bad/java/Square.java
package com.example.solidsamples.bad.java;

/**
 * Created by pieter.snyman on 11/13/17.
 */

public class Square
{
    private final double width;
    private final double height;

    public Square(final double width, final double height) {

        this.width = width;
        this.height = height;
    }

    public double getWidth() {
        return width;
    }

    public double getHeight() {
        return height;
    }

}